Update DB and controllers & services tests